image spacing fix

--- a/styles.css
+++ b/styles.css
@@ -168,8 +168,11 @@ a:hover {
 }
 
 .box-image {
+    object-fit: cover;
+    background-size: cover;
+
     width: 100%; 
-    height: 250px;
+    max-height: 250px;
     overflow: hidden;
 }
 
